Add why choose learnify card section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <ul class="makeFlex">
                             <li><a href="">Home</a></li>
                             <li><a href="">Plans</a></li>
-                            <li><a href="">Courses</a></li>
+                            <li><a href="#coursesId">Courses</a></li>
                             <li><a href="">FAQ</a></li>
                         </ul>
                     </div>
@@ -87,8 +87,8 @@
             <div class="rular"></div>
 
             <!-- Course Section -->
-            <div class="course-Category">
-                <h2>All the skills you need in one place</h2>
+            <div class="course-Category" id="coursesId">
+                <h1>All the skills you need in one place</h1>
 
                 <div class="course-Container">
                     <div class="courses-Tab">
@@ -109,6 +109,109 @@
                 </div>
             </div>
 
+            <div class="rular"></div>
+
+            <!-- Steps cards section -->
+
+            <div class="whyChooseSection">
+                <h1>Why Choose Learnify</h1>
+                <div class="whyChooseUs">
+                    <div class="whyChooseUsCards chooseCard1">
+                        <div class="cardContent">
+                            <div class="cardReason">
+                            LEARN FROM EXPERTS
+                            </div>
+                            <div class="cardDetails">
+                                Gain insights from industry-leading professionals with hands-on experience and deep domain knowledge.
+                            </div>
+                            <div class="cardBottom">
+                                <div class="cardQuotes">
+                                    <blockquote>
+                                        "Technology changes rapidly, and the best way to predict the future is to create it." 
+                                        <cite>
+                                            – Alan Kay
+                                        </cite>
+                                    </blockquote>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="cardPageNo">
+                            4
+                        </div>
+                    </div>
+                    <div class="whyChooseUsCards WCUC chooseCard2" data-index="54.8%">
+                        <div class="cardContent">
+                            <div class="cardReason">
+                            HANDS-ON LEARNING
+                            </div>
+                            <div class="cardDetails">
+                                Engage in practical projects and real-life case studies to reinforce your learning and build industry-ready skills.
+                            </div>
+                            <div class="cardBottom">
+                                <div class="cardQuotes">
+                                    <blockquote>
+                                    "The beautiful thing about learning is that nobody can take it away from you."
+                                    <cite>
+                                        – B.B. King
+                                    </cite>
+                                </blockquote>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cardPageNo">
+                            3
+                        </div>
+                    </div>
+                    <div class="whyChooseUsCards WCUC chooseCard3" data-index="34%">
+                        <div class="cardContent">
+                            <div class="cardReason">
+                                FLEXIBLE LEARNING
+                            </div>
+                            <div class="cardDetails">
+                                Access courses anytime, anywhere, and learn at your own pace with structured yet flexible learning options.
+                            </div>
+                            <div class="cardBottom">
+                                <div class="cardQuotes">
+                                    <blockquote>
+                                    "If you don't keep up with technology, you'll be left behind."
+                                    <cite>
+                                        – Elon Musk
+                                    </cite>
+                                </blockquote>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="cardPageNo">
+                            2
+                        </div>
+                    </div>
+
+                    <div class="whyChooseUsCards WCUC chooseCard4 slided">
+                        <div class="cardContent">
+                            <div class="cardReason">
+                                INDUSTRY RELEVANT COURSES
+                            </div>
+                            <div class="cardDetails textFadeIn">
+                                Our courses are designed by experts to keep you updated with the latest technologies.
+                            </div>
+                            <div class="cardQuotes textFadeIn">
+                                <blockquote>
+                                    "The only way to stay ahead in technology is to never stop learning."
+                                    <cite>
+                                        – Satya Nadella
+                                    </cite>
+                                </blockquote>
+                            </div>
+                        </div>
+                        
+                        <div class="cardPageNo">
+                            1
+                        </div>
+                    </div>
+                </div>
+            </div>
             
         </main>
 
